UODATE swagger tag not working with axios
